eZ publish changelog:
---------------------

Changes from 2.0.0 to 2.0.1
---------------------------
* Fixed cron update of news feeds.
* Fixed a reply/post error in forum where anonymous users could post when they shouldn't be able to.
* Fixed the links in the e-mails sent when people posts to the forum.

Changes from version 2.0 PRE 2 to 2.0.0
---------------------------------------
* Fixed better handling of special characters ( " ' / ) in eZ forum, eZ poll, 
  eZ filemanager, eZ imagecatalogue, eZ bug
* Fixed bug eZContact which caused companies to disappear (or look empty)
  when they were created directly from a category.
* Deletion of company categories is recursive. Any companies contained inside these
  categories will be moved to the top level.

Changes from version 2.0 PRE 1 to PRE 2
---------------------------------------
* Deletion of company, person and consultation in eZ contact has been fixed.
* Various bugfixes in consultation edit.
* Image views no longer displays error messages, instead a standard image explaining the fault is shown.
* Companies no longer disappear if they have no category selected, they are placed at the top category.
* eZ forum uses messagelist/1/2/3 instead of messagelist/1/?$Offset=2&Limit=3 in order to allow robots to index all postings to the forum.
* Clicking on author name in an article will take you to a page listing all articles by the author.
* Support for animated gifs/pngs in eZImageCatalogue.
* Bugfix for files with uppercase letters in the suffix.
* Added a small FAQ file.
* Added info about windows installation.
* Image list is improved, there's no longer images which take up more than one cell, they are also centered.
* File sizes for images are shown correctly.
* The login box in user/admin will remember the last page you were on and redirect to it when loggin in.
* Productview will list extra images with title and description in one column.

Changes from version 2.0 beta 3 to PRE 1